doc: update readme